@@ -7,6 +7,7 @@ version 0.82.05
 	Eliminate segmentation fault (non-root Linux usage)
 	autosave, save as dialog cancel bugfix
 	Linux/Android: driveinfo bugfix
+	Android file download progress/speedup
 
 version 0.82.04 ( 2015-08-28 )
 	More debug messages
